# disney-interview-2021

./: CMakeLists.txt  README.md
app/: Decode.cpp  Decode.hpp  Download.cpp  Download.hpp  Graphics.cpp  Graphics.hpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  Json.cpp  Json.hpp  Main.cpp  Main.hpp  Network.cpp  Network.hpp  Render.cpp  Render.hpp  Signal.cpp  Signal.hpp  Viewer.cpp  Viewer.hpp  Worker.cpp  Worker.hpp
cmake/: CompileResource.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindSigCpp3.cmake
data/: common-schema.json  home-schema.json  ref-schema.json  schema-common.json  schema-home.json  schema-ref.json
doc/: curated.json.example  personalized.json.example  trending.json.example
